--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- My Style -->
-
     <link rel="stylesheet" href="css/style.css" />
+    
+    <!--   Google Site Verification   -->
+    <meta name="google-site-verification" content="cqw2QKXpjMInDuXeiy-u7K5bdAjDHqf_yNHRc1QPsgs" />
+    
   </head>
 
   <body>
