--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Farmabet</title>
+    <link rel="icon" href="https://bit.ly/3NSUE9f" sizes="192x192">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
