--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
       <div class="navbar-extra">
         <a
-          href="https://www.farmabet.net/register?code=5ZIR2IL3"
+          href="https://www.farmabet.net/register?code=SZ0XWBCL"
           target="_blank"
           id="masuk"
           ><i data-feather="log-in"></i
         ></a>
         <a
-          href="https://www.farmabet.net/register?code=5ZIR2IL3"
+          href="https://www.farmabet.net/register?code=SZ0XWBCL"
           target="_blank"
           id="daftar"
           ><i data-feather="user"></i
@@ -65,7 +65,7 @@
           pagcor resmi dan provider terbesar di Indonesia.
         </p>
         <a
-          href="https://www.farmabet.net/register?code=5ZIR2IL3"
+          href="https://www.farmabet.net/register?code=SZ0XWBCL"
           target="_blank"
           class="cta"
         >
